--- a/index.Rmd
+++ b/index.Rmd
@@ -215,10 +215,10 @@ umass_donations <- amherst_donations %>%
   filter(committee_name != "CORY 2020") %>%
   filter(umass_employer == "UMASS")
 
-ggplot(data = umass_donations, aes(x = contribution_receipt_date, y = contribution_receipt_amount, color = committee_name)) + geom_point(size = 3) + ylim(0, 3000) + scale_color_manual(values = c("#add8e6", "#00008b", "#ff0000", "#9b870c", "#B19CD9", "#ffa500")) + ylab("Contribution Amount ($)") + xlab("Date") + labs(color = "Committee Name") + theme_wsj(base_size = 12, color = "gray") + ggtitle("UMass Employee Donations") +   guides(color = guide_legend(override.aes = list(size = 8))) + theme(legend.text = element_text(size = 14))
+ggplot(data = umass_donations, aes(x = contribution_receipt_date, y = contribution_receipt_amount, color = committee_name)) + geom_point(size = 3) + ylim(0, 3000) + scale_color_manual(values = c("#add8e6", "#00008b", "#ff0000", "#9b870c", "#B19CD9", "#ffa500"))  + labs(color = "Committee Name") + theme_wsj(base_size = 12, color = "gray") + ggtitle("UMass Employee Donations") +  guides(color = guide_legend(override.aes = list(size = 8))) + theme(legend.text = element_text(size = 14)) + theme(axis.title.x=element_text(size=20)) + xlab("Date") +theme(axis.title.y=element_text(size=20)) + ylab("Contribution Size ($)")
 ```
 
-This scatter plot shows all 2019-2020 donations made by individuals who are UMass employees residing in Amherst. It seems that in the early days of the primaries, many UMass employees were optimistic that either Elizabeth Warren or Bernie Sanders would clinch the Democratic nomination, as most of the donations between June 2019 and January 2020 were to these two candidates. There were also quite a few donations to Andrew Yang during this time frame. Once Biden clinched the Democratic nomination at the August 2020 Democratic National Convention, donations for Biden came flooding in. In total, 195 donations were made to Biden, while 17 donations were made to Trump.
+This scatter plot shows all 2019-2020 donations made by individuals who are UMass employees residing in Amherst. It seems that in the early days of the primaries, many UMass employees were optimistic that either Elizabeth Warren or Bernie Sanders would clinch the Democratic nomination, as most of the donations between June 2019 and January 2020 were to these two candidates. There were also quite a few donations to Andrew Yang during this time frame. Once Biden clinched the Democratic nomination at the August 2020 Democratic National Convention, donations for Biden came flooding in. In total, 195 donations were made to Biden, while 17 donations were made to Trump. It is also apparent that there is a "U" shaped pattern of donation size over time. There were large donations to Elizabeth Warren and Bernie Sanders in early 2019, as these candidates showed promise for winning the primaries. Throughout the rest of 2019, donations were much smaller, largely remaining in the under $200 range. As the primaries drew closer, there were many larger donations, and donations continued to increase up until the election.
 
 
 
