--- a/index.Rmd
+++ b/index.Rmd
@@ -105,7 +105,7 @@ ggplot(data = expenditures_network, aes(x = x, y = y, xend = xend, yend = yend))
 The network indicates that:
 
 - The largest donors were skewed more towards Biden then Trump. Biden received support from six organizations, while Trump received support from two. Five organizations opposed Biden while six opposed Trump. 
-- Two organizations spent money supporting one candidate and opposing the other: the **FF Pac** and **Priorities USA Action** made expenditures supporting Joe Biden and opposing Donald Trump
+- Two organizations spent money supporting one candidate and opposing the other: the **FF Pac** and **Priorities USA Action** made expenditures supporting Joe Biden and opposing Donald Trump.
 - Candidate priorities align with donors. Conservatives have historically been large advocates for gun rights, explaining why the **NRA Victory Fund** would oppose Biden. Democrats are more invested in combating problems pertaining to climate change and environmental justice, leading the **NextGen Climate Action Committee** to support Biden.
 
 Moving forward, it would be interesting to examine how the number of PACs/organizations and their missions differ at different levels of expenditures.
